[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/HelpText.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://Graphics/Icons/energy.png" type="Texture2D" id=4]
[ext_resource path="res://Graphics/Icons/Time.png" type="Texture2D" id=5]
[ext_resource path="res://Scripts/SendShipsPanel.gd" type="Script" id=6]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=8]

[node name="SendShipsPanel" type="Control"]
offset_right = 1067.0
offset_bottom = 600.0
pivot_offset = Vector2( 533, 300 )
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 600.0 ],
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
offset_right = 1064.0
offset_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="Background" instance=ExtResource( 8 )]

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 0, 38 )
text = "SEND_SHIPS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="."]
offset_top = 48.0
offset_right = 1064.0
offset_bottom = 85.0
text = "SEND_SHIPS_DESC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Label" parent="."]
offset_left = 24.0
offset_top = 104.0
offset_right = 450.0
offset_bottom = 141.0
text = "ENEMIES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
offset_left = 24.0
offset_top = 144.0
offset_right = 450.0
offset_bottom = 576.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="VBoxContainer" parent="Scroll"]
offset_left = 10.0
offset_top = 10.0
offset_right = 416.0
offset_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalEnergyCost" type="Label" parent="."]
offset_left = 460.0
offset_top = 460.0
offset_right = 736.0
offset_bottom = 516.0
text = "TOTAL_COST"
align = 2

[node name="Send" type="Button" parent="."]
offset_left = 936.0
offset_top = 552.0
offset_right = 1060.0
offset_bottom = 592.0
text = "SEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalEnergyCost2" type="Label" parent="."]
offset_left = 816.0
offset_top = 460.0
offset_right = 1000.0
offset_bottom = 484.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyIcon3" type="TextureRect" parent="."]
offset_left = 764.0
offset_top = 456.0
offset_right = 796.0
offset_bottom = 488.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="EnergyIcon2" type="TextureRect" parent="."]
offset_left = 764.0
offset_top = 388.0
offset_right = 796.0
offset_bottom = 420.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyCost2" parent="." instance=ExtResource( 1 )]
anchor_top = 0.00333333
anchor_bottom = 0.00333333
offset_left = 816.0
offset_top = 390.0
offset_right = 988.0
offset_bottom = 420.0
adv_help = true
translate_help = false

[node name="PlanetEECost" parent="." instance=ExtResource( 1 )]
offset_left = 464.0
offset_top = 392.0
offset_right = 736.0
offset_bottom = 422.0
text = "[right]PLANET_EE_COST [img]Graphics/Icons/help.png[/img][/right]"
text = "PLANET_EE_COST "
label_text = "PLANET_EE_COST"
help_text = "PLANET_EE_COST_DESC"
align = 2

[node name="Panel" type="Panel" parent="."]
offset_left = 472.0
offset_top = 144.0
offset_right = 1040.0
offset_bottom = 348.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -54.0
offset_right = 100.0
offset_bottom = -38.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LessEnergy" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -74.0
offset_right = 168.0
offset_bottom = -18.0
text = "LESS_ENERGY"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelCosts" type="Label" parent="Panel"]
offset_left = 40.0
offset_top = 104.0
offset_right = 224.0
offset_bottom = 136.0
text = "TRAVEL_COSTS"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FasterTravel" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -74.0
offset_bottom = -18.0
text = "FASTER_TRAVEL"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyCost" type="Label" parent="Panel"]
offset_left = 344.0
offset_top = 104.0
offset_right = 528.0
offset_bottom = 128.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeCost" type="Label" parent="Panel"]
offset_left = 344.0
offset_top = 152.0
offset_right = 528.0
offset_bottom = 176.0
text = "01:12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyIcon" type="TextureRect" parent="Panel"]
offset_left = 292.0
offset_top = 100.0
offset_right = 324.0
offset_bottom = 132.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeIcon" type="TextureRect" parent="Panel"]
offset_left = 292.0
offset_top = 148.0
offset_right = 324.0
offset_bottom = 180.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drive" type="OptionButton" parent="."]
offset_left = 636.0
offset_top = 100.0
offset_right = 895.0
offset_bottom = 134.0
text = "STANDARD_DRIVE"
align = 1

[connection signal="close_button_pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Send" to="." method="_on_Send_pressed"]
[connection signal="value_changed" from="Panel/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="item_selected" from="Drive" to="." method="_on_Drive_item_selected"]
